--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
                 </div>
             </nav>
             <div class="text-box">
-               <div class="first-box"><h1>One Page Wonder</h1></div>
+               <div class="first-box"><h1>Welcome your village</h1></div>
                <div class="second-box"><h2>Will Rock Your Socks Off</h2></div>
                <div class="last-box"><button class="btn">LEARN MORE</button></div>
             </div>
